# linux

./: README.md
OpenGL-SDL2/source/: CMakeLists.txt
OpenGL-SDL2/source/include/: Window.h  glad.h  lAlgebra.h
OpenGL-SDL2/source/shaders/: fragmentTriangle.glsl  vertexQuad.glsl  vertexTriangle.glsl
OpenGL-SDL2/source/src/: Window.c  glad.c  lAlgebra.c  main.c
SDL2/camera/: main  main.c
SDL2/gui/: main  main.c  main.c~
SDL2/save_games/: readme.txt
SDL2/scrolling/: main  main.c  main.c~
SDL2/sound/: main  main.c~
SDL2/states/: main  main.c  main.c~
SDL2/switch_windows/: main  main.c~
